--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,8 @@ services:
     # Из какого Dockerfile собирать образ для этого контейнера:
     build: ./backend/
     env_file: .env
+    volumes:
+      - static:/backend_static
     # Какие контейнеры нужно запустить до старта этого контейнера:
     depends_on:
       - db
@@ -33,13 +35,19 @@ services:
   frontend:
     env_file: .env
     build: ./frontend/
+    command: cp -r /app/build/. /frontend_static/
+    volumes:
+      - static:/frontend_static
 # Добавляем новый контейнер: gateway 
   gateway:
     # Сбилдить и запустить образ, 
     # описанный в Dockerfile в папке gateway
     build: ./gateway/
+    env_file: .env
     # Ключ ports устанавливает
     # перенаправление всех запросов с порта 8000 хоста
     # на порт 80 контейнера
+    volumes:
+      - static:/staticfiles/
     ports:
-      - 8000:80 
+      - 8000:80
